# 3D-finger-vein

./: CMakeLists.txt  LICENSE  README.md  main.cpp
edge_detection/: edge_detection.cpp  edge_detection.h
map_texture/: map_texture.cpp  map_texture.h
preprocess/: preprocess.cpp  preprocess.h
reconstruction/: coor_plot.cpp  coor_plot.h  ellipse_optimize.cpp  ellipse_optimize.h  finger_reconstruct.cpp  finger_reconstruct.h  sub_ellipse_optimize.cpp  sub_ellipse_optimize.h
utils/: utils.cpp  utils.h
